# verbum

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Project Overview.txt  README.md  demo.cast  map.md  pyproject.toml  verbum_mock.html
api/: main.py
docs/: overview.md
docs/images/: README.txt
tests/: test_verbum_app.py
verbum/: poo.md
verbum/cli/: main.py  test.py
verbum/core/: bible_io.py  bible_service.py  formatting.py  reader.py  reference.py
verbum/domain/: passage.py  reference.py  verse.py
verbum/infrastructure/repositories/: bible_repository.py  json_bible_repository.py  test_repo.py
verbum/test/: test_cli_flow.py
verbum_web/: main.py
verbum_web/static/: style.css
verbum_web/templates/: index.html
verbum_web/templates/partials/: passage.html  search.html
